<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_video"
        android:icon="@drawable/video"
        android:title="@string/title_video" />


    <item
        android:id="@+id/navigation_heart"
        android:icon="@drawable/love"
        android:title="@string/title_heart" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/title_profile" />



</menu>